--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,12 @@
+@import
+url('https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
@@ -5,7 +14,16 @@ body {
   line-height: 1.5;
   color: #F3F3F3;
   margin: 0;
-  background-image: url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+  background: #1B1B32;
+  background-image: linear-gradient(
+      115deg,
+      rgba(190, 253, 222, 0.8),
+      rgba(190, 253, 222, 0.7)
+    ),
+    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center
@@ -86,7 +104,7 @@ button {
 }
 
 form {
-  background: rgba(27,27,50, 0.8);
+  background: rgba(81,201,97, 0.8);
   padding: 2.5rem;
   border-radius: 0.25rem;
 }
@@ -127,7 +145,7 @@ form {
   display: block;
   width: 100%;
   padding: 0.75rem;
-  background: #37AF65;
+  background: #7D1933;
   color: inherit;
   border-radius: 2px;
   cursor: pointer;
