--- a/mystyle.css
+++ b/mystyle.css
@@ -20,7 +20,7 @@ body {
       rgba(190, 253, 222, 0.8),
       rgba(190, 253, 222, 0.7)
     ),
-    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    url(https://codepen.io/jbettenh/pen/NWGaoJK);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
